# blockbot

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  config.py  docker-compose.yaml  docker-compose.yml  docs.md  main.py  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/deploy/: production.hcl  review.hcl
.github/workflows/: build.yml  deploy.yml  format.yml  workflow.yml
src/: __main__.py  bot.py  config.py  database.py  hooks.py  main.py  models.py  utils.py
src/copypastas/: gerry.txt  gnu_uwu.txt
src/examples/: commands.py  components.py  modals.py  options.py
src/extensions/: action_items.py  agenda.py  boosts.py  copypasta.py  dig.py  figlet.py  fortune.py  gerry.py  gib.py  hello_world.py  help.py  misc.py  rcon.py  register.py  rules.py  starboard.py  storage.py  tictactoe.py  timetable.py  upt.py  uptime.py  user_roles.py  userroles.py  verify.py  welcome.py  xkcd.py
src/hello_world/: modals.py
src/misc/: copypasta.py  dig.py  figlet.py  fortune.py  gerry.py
tools/: deploy-prod.sh  deploy-review.sh
tools/templates/: blockbot-review.hcl
