[project]
name = "blockbot"
version = "0.1.0"
description = "Discord bot maintained by the Redbrick webgroup"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "JedHazaymeh", email = "magma@redbrick.dcu.ie" }, { name = "nova", email = "nova@redbrick.dcu.ie"}]
maintainers = [{ name = "nova", email = "nova@redbrick.dcu.ie"}, { name = "wizzdom", email = "wizzdom@redbrick.dcu.ie"}]
dependencies = [
    "aiohttp>=3.11.14",
    "asyncpg>=0.30.0",
    "fortune-python>=1.1.1",
    "hikari>=2.2.0",
    "hikari-arc>=2.0.0",
    "hikari-miru>=4.2.0",
    "pyfiglet>=1.0.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
    "rcon>=2.4.9",
]

[project.urls]
Documentation = "https://docs.redbrick.dcu.ie/webgroup/blockbot/"
Repository = "https://github.com/redbrick/blockbot"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.397",
    "ruff>=0.11.2",
    "uv>=0.6.9",  # this should be the same as in the github workflows
]
nox = [
    "nox>=2025.2.9",
]

[tool.ruff]
include = ["./src/*.py", "noxfile.py"]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # Error (pycodestyle)
    "W", # Warning (pycodestyle)
    "I", # isort
    "N", # pep8-naming
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TC", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate
    "PL", # Pylint
    "PERF", # Perflint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line-too-long
    "PLR2004", # magic-value-comparison
    "PLR0913", # too-many-arguments
    "COM812", # missing-trailing-comma
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
required-version = "~=0.6"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
